<resources>
    <string name="app_name">云Contacts</string>

    <!-- 登陆界面 -->
    <string name="login_tv_welcome">欢迎使用云Contacts</string>
    <string name="login_et_username">手机/邮箱</string>
    <string name="login_et_password">密码</string>
    <string name="login_cb_rememberpwd">记住密码</string>
    <string name="login_cb_loginself">自动登录</string>
    <string name="login_bt_login">登录</string>
    <string name="login_bt_register">注册</string>

    <!-- 注册界面 -->
    <string name="register_tv_tel">手机号码</string>
    <string name="register_tv_email">电子邮箱</string>
    <!--<string name="register_tv_code">验证码</string>
    <string name="register_bt_getcode">获取验证码</string>-->
    <string name="register_tv_password">密  码</string>
    <string name="register_tv_password_hint">6~16个数字、字母、下划线</string>
    <string name="register_tv_checkpwd">确认密码</string>
    <string name="register_bt_register">注册</string>

    <!-- 同步联系人主界面 -->
    <string name="contacts_bt_cloudcontacts">云端联系人 216</string>
    <string name="contacts_bt_localcontacts">本地联系人 212</string>
    <string name="contacts_bt_cloudylocaln">云端有本地无 6</string>
    <string name="contacts_bt_localycloudn">本地有云端无 2</string>
    <string name="contacts_bt_mergesyn">融合同步</string>
    <string name="contacts_bt_onesyn">一端同步</string>

    <!-- 主界面中的标签栏 -->
    <string name="tabmain_tv_operatecontacts">同步</string>
    <string name="tabmain_tv_contacts">联系人</string>
    <string name="tabmain_tv_userinfo">我的</string>
    <!-- 主界面中的标题栏 -->
    <string name="tabmain_top_tv_operatecontacts">云备份通讯录</string>
    <string name="tabmain_top_tv_contacts">本地联系人</string>
    <string name="tabmain_top_tv_userinfo">我的信息</string>



    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>

</resources>
