<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.contacts.conan.cloudcontacts.LoginActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="60dp"
        android:textSize="20dp"
        android:text="@string/login_tv_welcome" />

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_et_username"/>

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_et_password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/login_cb_rememberpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_cb_rememberpwd"/>

            <CheckBox
                android:id="@+id/login_cb_loginself"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_cb_loginself"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_bt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_bt_login"/>

            <Button
                android:id="@+id/login_bt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_bt_register"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
