<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_top_height"
        android:orientation="horizontal"
        android:background="@color/common_top_bg">
        <!--<ImageView
            android:id="@+id/common_top_iv_left_showcontacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            />-->
        <TextView
            android:id="@+id/register_tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_gravity="center_vertical"
            android:layout_margin="6dip"
            android:layout_weight="1"
            android:text="返回"
            android:textSize="16sp"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/common_top_tv_middle_showcontacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="用户注册"
            android:textColor="#ffffff"
            android:textSize="19sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_gravity="center_vertical"
            android:layout_margin="6dip"
            android:layout_weight="1"
            android:text="返回"
            android:textSize="16sp"
            android:textColor="@color/common_top_bg"/>


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textSize="@dimen/register_tv_size"
                    android:text="@string/register_tv_tel"/>

                <EditText
                    android:id="@+id/register_et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:layout_weight="6"/>

            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textSize="@dimen/register_tv_size"
                    android:text="@string/register_tv_email"/>

                <EditText
                    android:id="@+id/register_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEmailAddress"
                    android:layout_weight="6"/>

            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textSize="@dimen/register_tv_size"
                    android:text="@string/register_tv_password"/>

                <EditText
                    android:id="@+id/register_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_tv_password_hint"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:layout_weight="6"/>

            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textSize="@dimen/register_tv_size"
                    android:text="@string/register_tv_checkpwd"/>

                <EditText
                    android:id="@+id/register_et_check_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:layout_weight="6"/>

            </TableRow>
            <Button
                android:id="@+id/register_bt_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register_bt_register"/>
        </TableLayout>

    </RelativeLayout>

</LinearLayout>